--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  margin-top: 20vh
 }
 
 .App-logo {
@@ -9,14 +10,19 @@
 }
 
 header {
-  background-color: #282c34;
+  background-color: #00000A;
   min-height: 20vh;
-  display: flex;
-  flex-direction: column;
+  display: absolute;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  -webkit-box-shadow: 0 2px 6px #41bce2;
+  -moz-box-shadow: 0 6px 6px #41bde2;
+  box-shadow: 0 2px 6px #41bde2;
 }
 
 .App-link {
